--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "module": "commonjs",
+    "module": "ES2015",
     "target": "es5",
     "declaration": true,
     "removeComments": true,
